test/fixtures/expressions/invalid_contents/escaped_quote.mf2
{1 a \| thing}
=== spans ===
                    {1 a \| thing}
Pattern             ^^^^^^^^^^^^^^ 0:0-0:14
LiteralExpression   ^^^^^^^^^^^^^^ 0:0-0:14
Number               ^             0:1-0:2
Number.integral      ^             0:1-0:2
=== diagnostics ===
Placeholder expression contains invalid content. (at @3..13)
  {1 a \| thing}
     ^^^^^^^^^^
=== fixed ===
(no fixes)
=== formatted ===
(cannot format due to fatal errors)
=== ast ===
Pattern {
    parts: [
        LiteralExpression {
            span: @0..14,
            literal: Number {
                start: @1,
                raw: "1",
                is_negative: false,
                integral_len: 1,
                fractional_len: None,
                exponent_len: None,
            },
            annotation: None,
            attributes: [],
        },
    ],
}